--- a/DeliverySite/DeliverySite/Views/User/ChangePassword.cshtml
+++ b/DeliverySite/DeliverySite/Views/User/ChangePassword.cshtml
@@ -12,7 +12,7 @@
 <head>
 </head>
 
-<body>
+<body id="test1">
 
     @using (Html.BeginForm("ConfirmChangePassword", "User", FormMethod.Post))
     {
@@ -53,11 +53,12 @@
         </div>
     }
 
-
-
-
-
-
-    <script></script>
+    <script>
+        var myVal = '@Session["BigFont"]';
+        if (myVal != null) {
+            document.getElementById("test1").style.fontSize = "200%";
+            document.getElementById("test1").style.fontWeight = "900";
+        }
+    </script>
 </body>
 </html>
