--- a/DeliverySite/DeliverySite/Views/User/AddReview.cshtml
+++ b/DeliverySite/DeliverySite/Views/User/AddReview.cshtml
@@ -2,8 +2,9 @@
 
 @{
     ViewBag.Title = "AddReview";
+    Layout = "~/Views/Shared/_LayoutUsers.cshtml";
 }
-
+<br />
 <h2>AddReview</h2>
 
 <script src="~/Scripts/jquery-1.7.1.min.js"></script>
@@ -46,7 +47,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head >
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -56,7 +57,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
 </head>
-<body>
+<body id="test1">
 
     <form method="post" action="../User/AddReviewToDb">
 
@@ -66,27 +67,33 @@
         <br />
 
         <div>
-            <label class="loginFormElement">User ID:</label>
+            <label id="test" class="loginFormElement">User ID:</label>
             <input class="form-control" id="ID" name="ID" readonly="readonly" placeholder=@Model.user.Id value=@Model.user.Id>
         </div>
         @*<div>
-            <label class="loginFormElement">Its good or bad Review:</label>
-            <input class="form-control" id="ID" name="ID" readonly="readonly" placeholder=@Model.user.Id value=@Model.user.Id>
-        </div>*@
+                <label class="loginFormElement">Its good or bad Review:</label>
+                <input class="form-control" id="ID" name="ID" readonly="readonly" placeholder=@Model.user.Id value=@Model.user.Id>
+            </div>*@
         <div class="form-group">
             <label class="loginformelement">Review:</label>
             <textarea class="form-control" rows="5" id="Review" name="Review" placeholder="Write you Review"></textarea>
-            </div>
-            <br />
-            <br />
-            <input type="submit" name="login" class="login login-submit" value="Send Request">
+        </div>
+        <br />
+        <br />
+        <input type="submit" name="login" class="login login-submit" value="Send Request">
     </form>
-
-
-    @TempData["Order"]
-    @TempData["SuccessPurchase"]
+    
+    <script>
+        var myVal = '@Session["BigFont"]';
+        if (myVal != null) {
+            document.getElementById("test1").style.fontSize = "150%";
+            document.getElementById("test1").style.fontWeight = "900";
+        }
+    </script>
 
     @*@Html.ValidationSummary()*@
+
+
 
 </body>
 
