--- a/DeliverySite/DeliverySite/Views/Company/CompanyWindow.cshtml
+++ b/DeliverySite/DeliverySite/Views/Company/CompanyWindow.cshtml
@@ -29,7 +29,7 @@
     }
 
     #option2 {
-        content: url(https://cdn4.iconfinder.com/data/icons/gray-business-2/512/xxx041-512.png);
+        content: url(http://www.cakesfromthesoul.co.uk/images/review-icon-png-1.png);
     }
 
     #option3 {
@@ -53,11 +53,9 @@
 <body>
     <div class="container body-content">
         
-        @*@<a href="../Manager/ShowManagers">
+        <a href="../Company/ViewReviews">
             <div class="options" id="option2">option two</div>
         </a>
-        <a href="../User/ShowUsers">
-            <div class="options" id="option3">Show Users</div>*@
     
         <a href="../Product/AddProduct">
             <div class="options" id="option4">Add new Product</div>
