--- a/DeliverySite/DeliverySite/Views/Manager/ShowOrders.cshtml
+++ b/DeliverySite/DeliverySite/Views/Manager/ShowOrders.cshtml
@@ -28,6 +28,9 @@
         <th>
             @Html.DisplayNameFor(model => model.order.UserId)
         </th>
+        <th>
+            Date
+        </th>
 
         <th></th>
     </tr>
@@ -51,6 +54,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.UserId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem=>item.Date)
             </td>
         </tr>
     }
