--- a/DeliverySite/DeliverySite/Views/User/ShowOrders.cshtml
+++ b/DeliverySite/DeliverySite/Views/User/ShowOrders.cshtml
@@ -35,7 +35,9 @@
                 ID
             </th>
 
-            <th></th>
+            <th>
+                Date
+            </th>
         </tr>
         @foreach (var item in Model.orders)
         {
@@ -57,6 +59,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.UserId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem=>item.Date)
                 </td>
                 <td>
                     @Html.ActionLink("Re-Order", "ReOrder", new { id = item.OrderNum })
