--- a/DeliverySite/DeliverySite/Views/User/AddReview.cshtml
+++ b/DeliverySite/DeliverySite/Views/User/AddReview.cshtml
@@ -82,18 +82,17 @@
         <br />
         <input type="submit" name="login" class="login login-submit" value="Send Request">
     </form>
-    
+
+    @*@Html.ValidationSummary()*@
+
+    <button style="float:right" type="button" onclick="changeFont()">Change Font!</button>
+
     <script>
-        var myVal = '@Session["BigFont"]';
-        if (myVal != null) {
+        function changeFont() {
             document.getElementById("test1").style.fontSize = "150%";
             document.getElementById("test1").style.fontWeight = "900";
         }
     </script>
-
-    @*@Html.ValidationSummary()*@
-
-
 
 </body>
 
