--- a/DeliverySite/DeliverySite/Views/User/ChangePassword.cshtml
+++ b/DeliverySite/DeliverySite/Views/User/ChangePassword.cshtml
@@ -53,11 +53,14 @@
         </div>
     }
 
+
+    <button style="float:right" type="button" onclick="changeFont()">Change Font!</button>
     <script>
-        var myVal = '@Session["BigFont"]';
-        if (myVal != null) {
-            document.getElementById("test1").style.fontSize = "200%";
+        function changeFont() {
+            document.getElementById("test1").style.fontSize = "150%";
             document.getElementById("test1").style.fontWeight = "900";
+            document.getElementById("table").style.fontSize = "200%";
+            document.getElementById("table").style.fontWeight = "900";
         }
     </script>
 </body>
