--- a/DeliverySite/DeliverySite/Views/Company/ShowCompanies.cshtml
+++ b/DeliverySite/DeliverySite/Views/Company/ShowCompanies.cshtml
@@ -73,7 +73,7 @@
             <th>
                 Code
             </th>
-            
+
         </tr>
         @foreach (var item in Model.companies)
         {
@@ -91,12 +91,13 @@
         }
     </table>
 
+    <button style="float:right" type="button" onclick="changeFont()">Change Font!</button>
+
     <script>
-        var myVal = '@Session["BigFont"]';
-        if (myVal != null) {
+        function changeFont() {
             document.getElementById("test1").style.fontSize = "150%";
             document.getElementById("test1").style.fontWeight = "900";
-            document.getElementById("table").style.fontSize = "200%";
+            document.getElementById("table").style.fontSize = "150%";
             document.getElementById("table").style.fontWeight = "900";
         }
     </script>
