--- a/DeliverySite/DeliverySite/Views/Company/CompanyWindow.cshtml
+++ b/DeliverySite/DeliverySite/Views/Company/CompanyWindow.cshtml
@@ -52,12 +52,15 @@
 
 <body>
     <div class="container body-content">
-        
+
         <a href="../Company/ViewReviews">
             <div class="options" id="option2">option two</div>
         </a>
-    
+
         <a href="../Product/AddProduct">
+            <div class="options" id="option4">Add new Product</div>
+        </a>
+        <a href="../Company/ViewMonthlyReport">
             <div class="options" id="option4">Add new Product</div>
         </a>
     </div>
