--- a/DeliverySite/DeliverySite/Views/Manager/OrdersNumber.cshtml
+++ b/DeliverySite/DeliverySite/Views/Manager/OrdersNumber.cshtml
@@ -1,52 +1,10 @@
-﻿@model DeliverySite.ModelView.ReviewViewModel
+﻿@model DeliverySite.ModelView.OrderViewModel
 
 @{
-    ViewBag.Title = "ViewMonthlyReport";
-    Layout = "~/Views/Shared/_LayoutCompanies.cshtml";
-
+    ViewBag.Title = "OrderNumber";
 }
 
-<h2>ViewMonthlyReport</h2>
-
-<style>
-
-    body {
-        background: #E6E6FA;
-    }
-
-    .search {
-        float: left;
-        margin: 20px;
-    }
-
-    table#t01 th {
-        background-color: black;
-        color: white;
-    }
-
-    .headLine {
-        color: deepskyblue;
-        font-size: 130%;
-        font-weight: bold;
-    }
-
-    table#t01 tr:nth-child(even) {
-        background-color: #eee;
-    }
-
-    table#t01 tr:nth-child(odd) {
-        background-color: #fff;
-    }
-
-    table {
-        width: 100%;
-    }
-
-    table, th, td {
-        border: 1px solid black;
-        border-collapse: collapse;
-    }
-</style>
+<h2>OrderNumber</h2>
 
 <!DOCTYPE html>
 <html>
@@ -71,11 +29,9 @@
             <th>
                 ID
             </th>
+
             <th>
                 Date
-            </th>
-            <th>
-                Price
             </th>
         </tr>
         @foreach (var item in Model.orders)
@@ -100,21 +56,15 @@
                     @Html.DisplayFor(modelItem => item.Date)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.price)
+                    @Html.ActionLink("Re-Order", "ReOrder", new { id = item.OrderNum })
                 </td>
             </tr>
         }
     </table>
-
     Total Orders: @Model.orders.Count()
-    <br>
-    Total Income: @Model.orders.Sum(i => i.price)
-    <br>
-
+    <br />
     <div>
-        @Html.ActionLink("Back to Menu", "CompanyWindow")
+        @Html.ActionLink("Back to Menu", "EditCompanies")
     </div>
-
-
 </body>
 </html>
