--- a/DeliverySite/DeliverySite/Views/Manager/OrdersNumber.cshtml
+++ b/DeliverySite/DeliverySite/Views/Manager/OrdersNumber.cshtml
@@ -2,9 +2,10 @@
 
 @{
     ViewBag.Title = "OrderNumber";
+    Layout = "~/Views/Shared/_LayoutManagers.cshtml";
 }
 
-<h2>OrderNumber</h2>
+<h2>Number of Orders:</h2>
 
 <!DOCTYPE html>
 <html>
