--- a/DeliverySite/DeliverySite/Views/Company/AddCompany.cshtml
+++ b/DeliverySite/DeliverySite/Views/Company/AddCompany.cshtml
@@ -69,6 +69,13 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="row">
+                                    <div class="col-xs-6 col-sm-6 col-md-6">
+                                        <div class="form-group">
+                                            <input type="email" name="Mail" id="Mail" class="form-control input-sm" placeholder="Mail" value="@Model.company.Mail">
+                                        </div>
+                                    </div>
+                                </div>
 
                                 <input type="submit" value="Register" class="btn btn-info btn-block">
                                 @Html.ValidationSummary()
