--- a/DeliverySite/DeliverySite/Views/User/ShowOrders.cshtml
+++ b/DeliverySite/DeliverySite/Views/User/ShowOrders.cshtml
@@ -64,7 +64,7 @@
                     @Html.DisplayFor(modelItem=>item.Date)
                 </td>
                 <td>
-                    @Html.ActionLink("Re-Order", "ReOrder", new { id = item.OrderNum })
+                    @Html.ActionLink("Re-Order", "ReOrder", new { id = item.ProductId })
                 </td>
             </tr>
         }
