--- a/DeliverySite/DeliverySite/Views/User/ShowOrders.cshtml
+++ b/DeliverySite/DeliverySite/Views/User/ShowOrders.cshtml
@@ -69,7 +69,9 @@
             </tr>
         }
     </table>
-
+    <div>
+        @TempData["prdnotex"]
+    </div>
     <div>
         @Html.ActionLink("Back to Menu", "UserWindow")
     </div>
