--- a/DeliverySite/DeliverySite/Views/Home/Index.cshtml
+++ b/DeliverySite/DeliverySite/Views/Home/Index.cshtml
@@ -20,22 +20,21 @@
 }
 
 <style>
-    .test { 
-        background-image: url('https://shopee.co.id/inspirasi-shopee/wp-content/uploads/2018/09/express-delivery.jpg'); 
-        background-size: cover; 
-        background-repeat: no-repeat; 
-        max-width: 100%; 
-        height: 500px; 
-        text-align: right; 
-
+    .test {
+        background-image: url('https://shopee.co.id/inspirasi-shopee/wp-content/uploads/2018/09/express-delivery.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+        max-width: 100%;
+        height: 500px;
+        text-align: right;
     }
 
     body {
         background-color: dimgrey;
     }
 
-    .jumbotron{
-        align-items:flex-start;
+    .jumbotron {
+        align-items: flex-start;
     }
 </style>
 
@@ -56,5 +55,7 @@
         </p>
         <p></p>
     </div>
-    
+
 </div>
+
+<script src="~/Scripts/bootstrap-accessibility.min.js"></script>
