--- a/DeliverySite/DeliverySite/Views/Company/CompanyWindow.cshtml
+++ b/DeliverySite/DeliverySite/Views/Company/CompanyWindow.cshtml
@@ -17,7 +17,7 @@
         width: 120px;
         height: 120px;
         border-style: groove;
-        background-color: aquamarine;
+        background-color: antiquewhite;
         margin-top: 50px;
         float: left;
         margin: 50px;
@@ -25,11 +25,11 @@
 
 
     #option1 {
-        content: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSxkU1wxUaIqPbNEmxmIYj1yNqMBUu2aJ1nPqMIugZ8Gpi2IBZ-);
+        content: url(https://www.flaticon.com/premium-icon/icons/svg/707/707659.svg);
     }
 
     #option2 {
-        content: url(http://www.cakesfromthesoul.co.uk/images/review-icon-png-1.png);
+        content: url(http://chittagongit.com/images/product-icon-png/product-icon-png-17.jpg);
     }
 
     #option3 {
@@ -37,7 +37,7 @@
     }
 
     #option4 {
-        content: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSs9baSkUk7Q4YuWrA3TM1rnci8YmMq2SuDqE_Xgd3Oun-9TM-D9w);
+        content: url(https://image.flaticon.com/icons/svg/235/235253.svg);
     }
 
     #option5 {
@@ -54,11 +54,11 @@
     <div class="container body-content">
 
         <a href="../Company/ViewReviews">
-            <div class="options" id="option2">option two</div>
+            <div class="options" id="option1">option two</div>
         </a>
 
         <a href="../Product/AddProduct">
-            <div class="options" id="option4">Add new Product</div>
+            <div class="options" id="option2">Add new Product</div>
         </a>
         <a href="../Company/ViewMonthlyReport">
             <div class="options" id="option4">Add new Product</div>
