--- a/DeliverySite/DeliverySite/Views/Company/CompanyWindow.cshtml
+++ b/DeliverySite/DeliverySite/Views/Company/CompanyWindow.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_LayoutCompanies.cshtml";
 }
 <h2>@Session["UserName"]</h2>
-<h2>Company Window</h2>
+<h2>Company Menu</h2>
 
 <style>
 
