--- a/DeliverySite/DeliverySite/Views/Company/ShowCompanies.cshtml
+++ b/DeliverySite/DeliverySite/Views/Company/ShowCompanies.cshtml
@@ -91,7 +91,9 @@
         }
     </table>
 
-    <button style="float:right" type="button" onclick="changeFont()">Change Font!</button>
+    <button style="float:right" type="button" onclick="changeFont()">A+</button>
+    <button style="float:right" type="button" onclick="smallerFont()">A-</button>
+
 
     <script>
         function changeFont() {
@@ -100,6 +102,14 @@
             document.getElementById("table").style.fontSize = "150%";
             document.getElementById("table").style.fontWeight = "900";
         }
+
+        function smallerFont() {
+            document.getElementById("test1").style.fontSize = "140%";
+            document.getElementById("test1").style.fontWeight = "500";
+            document.getElementById("table").style.fontSize = "114%";
+            document.getElementById("table").style.fontWeight = "500";
+        }
+
     </script>
 </body>
 </html>
