--- a/DeliverySite/DeliverySite/Views/Home/Index.cshtml
+++ b/DeliverySite/DeliverySite/Views/Home/Index.cshtml
@@ -40,9 +40,9 @@
 
 
 <div class="jumbotron test">
-    <h1>Delivery</h1>
+    @*<h1>Delivery</h1>*@
     <p class="lead"> </p>
-    <img src="https://image.flaticon.com/icons/png/128/414/414272.png" alt="Sample Photo" />
+    @*<img src="https://image.flaticon.com/icons/png/128/414/414272.png" alt="Sample Photo" />*@
 </div>
 
 
