--- a/DeliverySite/DeliverySite/Views/Manager/ManagerWindow.cshtml
+++ b/DeliverySite/DeliverySite/Views/Manager/ManagerWindow.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_LayoutManagers.cshtml";
 }
 <h2>@Session["UserName"]</h2>
-<h2>Manager Window</h2>
+<h2>Manager Menu</h2>
 
 <style>
 
@@ -17,7 +17,7 @@
         width: 120px;
         height: 120px;
         border-style: groove;
-        background-color: aquamarine;
+        background-color: antiquewhite;
         margin-top: 50px;
         float: left;
         margin: 50px;
@@ -45,7 +45,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Manager Window</title>
+    <title>Manager Menu</title>
 </head>
 
 <body>
