--- a/DeliverySite/DeliverySite/Views/User/Login.cshtml
+++ b/DeliverySite/DeliverySite/Views/User/Login.cshtml
@@ -34,7 +34,7 @@
             @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
         </div>
     </div>
-    <input type="checkbox" name="bigFont" value="bigFont" style="margin-left:95px;"> I Want Big Font<br>
+    @*<input type="checkbox" name="bigFont" value="bigFont" style="margin-left:95px;"> I Want Big Font<br>*@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
