--- a/DeliverySite/DeliverySite/Views/Product/ShowProducts.cshtml
+++ b/DeliverySite/DeliverySite/Views/Product/ShowProducts.cshtml
@@ -117,7 +117,9 @@
 
     </table>
 
-    <button style="float:right" type="button" onclick="changeFont()">Change Font!</button>
+    <button style="float:right" type="button" onclick="changeFont()">A+</button>
+    <button style="float:right" type="button" onclick="smallerFont()">A-</button>
+
 
     <script>
         function changeFont() {
@@ -125,6 +127,13 @@
             document.getElementById("test1").style.fontWeight = "900";
             document.getElementById("table").style.fontSize = "200%";
             document.getElementById("table").style.fontWeight = "900";
+        }
+
+        function smallerFont() {
+            document.getElementById("test1").style.fontSize = "140%";
+            document.getElementById("test1").style.fontWeight = "500";
+            document.getElementById("table").style.fontSize = "114%";
+            document.getElementById("table").style.fontWeight = "500";
         }
     </script>
 </body>
