--- a/DeliverySite/DeliverySite/Views/User/ShowOrders.cshtml
+++ b/DeliverySite/DeliverySite/Views/User/ShowOrders.cshtml
@@ -61,7 +61,7 @@
                     @Html.DisplayFor(modelItem => item.UserId)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem=>item.Date)
+                    @Html.DisplayFor(modelItem => item.Date)
                 </td>
                 <td>
                     @Html.ActionLink("Re-Order", "ReOrder", new { id = item.ProductId })
@@ -76,7 +76,8 @@
         @Html.ActionLink("Back to Menu", "UserWindow")
     </div>
 
-    <button style="float:right" type="button" onclick="changeFont()">Change Font!</button>
+    <button style="float:right" type="button" onclick="changeFont()">A+</button>
+    <button style="float:right" type="button" onclick="smallerFont()">A-</button>
 
     <script>
         function changeFont() {
@@ -84,6 +85,13 @@
             document.getElementById("test1").style.fontWeight = "900";
             document.getElementById("table").style.fontSize = "200%";
             document.getElementById("table").style.fontWeight = "900";
+        }
+
+        function smallerFont() {
+            document.getElementById("test1").style.fontSize = "140%";
+            document.getElementById("test1").style.fontWeight = "500";
+            document.getElementById("table").style.fontSize = "114%";
+            document.getElementById("table").style.fontWeight = "500";
         }
     </script>
 </body>
